@@ -3,6 +3,7 @@
 Revision history for Data::ObjectDriver
 
 0.06
+    - Added peek_next() method to ResultSet, q.v.
     - Localized creation of D::OD::Iterator object. Thanks to Hirotaka Ogawa
       for the patch.
     - Fixed compilation error with Perl 5.10. Thanks to smpeters for the patch.
